card design fixed

--- a/team.html
+++ b/team.html
@@ -519,10 +519,10 @@
                         <div class="team__member__3__single text-center team__member__border single__transform">
                             <div class="team__member__3__single__inner">
                                 <div class="team__member__3__img">
-                                    <img src="assets/img/service/SAIF.png" alt="">
+                                    <img src="assets/img/service/HAMID.png" alt="">
                                 </div>
                                 <div class="team__member__name">
-                                    <h6><a href="team-details.html">Mr. Saif Rahman</a></h6>
+                                    <h6><a href="team-details.html">Mr. Hamid</a></h6>
                                     <p>Project Manager</p>
                                 </div>
                                 <div class="team__member__icon">
