--- a/webdevelopment.html
+++ b/webdevelopment.html
@@ -699,7 +699,7 @@
                                         <div class="row g-4 horizontal-card">
                                             <div class="card mb-3">
                                                 <div class="row g-0">
-                                                    <div class="col-md-4" style="padding-left: 0px;">
+                                                    <div class="col-md-4 p-0">
                                                         <img src="assets/img/service/33.jpg"
                                                             class="img-fluid rounded-start" alt="...">
                                                     </div>
@@ -717,7 +717,7 @@
                                             </div>
                                             <div class="card mb-3">
                                                 <div class="row g-0">
-                                                    <div class="col-md-4" style="padding-left: 0px;">
+                                                    <div class="col-md-4 p-0">
                                                         <img src="assets/img/web image/coding.jpg"
                                                             class="img-fluid rounded-start" alt="...">
                                                     </div>
@@ -734,7 +734,7 @@
                                             </div>
                                             <div class="card mb-3">
                                                 <div class="row g-0">
-                                                    <div class="col-md-4" style="padding-left: 0px;">
+                                                    <div class="col-md-4 p-0">
                                                         <img src="assets/img/web image/CMS.jpg"
                                                             class="img-fluid rounded-start" alt="...">
                                                     </div>
@@ -752,7 +752,7 @@
                                             </div>
                                             <div class="card mb-3">
                                                 <div class="row g-0">
-                                                    <div class="col-md-4" style="padding-left: 0px;">
+                                                    <div class="col-md-4 p-0">
                                                         <img src="assets/img/web image/ecommerce.jpg"
                                                             class="img-fluid rounded-start" alt="...">
                                                     </div>
@@ -760,7 +760,8 @@
                                                         <div class="card-body">
                                                             <h5 class="card-title">E-Commerce Development
                                                             </h5>
-                                                            <span class="card-text">Make your visitors into customers with
+                                                            <span class="card-text">Make your visitors into customers
+                                                                with
                                                                 our comprehensive e-commerce features, including payment
                                                                 PSD templates, stock tracking, and detailed reporting
                                                                 tools.
@@ -771,7 +772,7 @@
                                             </div>
                                             <div class="card mb-3">
                                                 <div class="row g-0">
-                                                    <div class="col-md-4" style="padding-left: 0px;">
+                                                    <div class="col-md-4 p-0">
                                                         <img src="assets/img/web image/APP Development.jpg"
                                                             class="img-fluid rounded-start" alt="...">
                                                     </div>
@@ -788,7 +789,7 @@
                                             </div>
                                             <div class="card mb-3">
                                                 <div class="row g-0">
-                                                    <div class="col-md-4" style="padding-left: 0px;">
+                                                    <div class="col-md-4 p-0">
                                                         <img src="assets/img/web image/API.jpg"
                                                             class="img-fluid rounded-start" alt="...">
                                                     </div>
@@ -805,14 +806,15 @@
                                             </div>
                                             <div class="card mb-3">
                                                 <div class="row g-0">
-                                                    <div class="col-md-4" style="padding-left: 0px;">
+                                                    <div class="col-md-4 p-0">
                                                         <img src="assets/img/web image/responsive.jpg"
                                                             class="img-fluid rounded-start" alt="...">
                                                     </div>
                                                     <div class="col-md-8">
                                                         <div class="card-body">
                                                             <h5 class="card-title">Responsive Design</h5>
-                                                            <span class="card-text">The mobile-first approach is practiced
+                                                            <span class="card-text">The mobile-first approach is
+                                                                practiced
                                                                 at Minds On to make the site look and work right on any
                                                                 device the client is using.
                                                             </span>
@@ -823,14 +825,15 @@
 
                                             <div class="card mb-3">
                                                 <div class="row g-0">
-                                                    <div class="col-md-4" style="padding-left: 0px;">
+                                                    <div class="col-md-4 p-0">
                                                         <img src="assets/img/web image/maintance.jpg"
                                                             class="img-fluid rounded-start" alt="...">
                                                     </div>
                                                     <div class="col-md-8">
                                                         <div class="card-body">
                                                             <h5 class="card-title">Website Maintenance</h5>
-                                                            <span class="card-text">Another critical factor of success in
+                                                            <span class="card-text">Another critical factor of success
+                                                                in
                                                                 e-business is having a professional website. Keeping
                                                                 your site updated and secure, we provide all maintenance
                                                                 and support services for your website.
@@ -841,7 +844,7 @@
                                             </div>
                                             <div class="card mb-3">
                                                 <div class="row g-0">
-                                                    <div class="col-md-4" style="padding-left: 0px;">
+                                                    <div class="col-md-4 p-0">
                                                         <img src="assets/img/web image/ui.jpg"
                                                             class="img-fluid rounded-start" alt="...">
                                                     </div>
@@ -852,19 +855,15 @@
                                                                 concentrates on making the design aesthetic and
                                                                 functional. Our work involves the creation of designs
                                                                 that meet the client’s desires concerning their targeted
-                                                                customers besides helping them to meet their targets.
+                                                                customers besides helping them to meet targets.
                                                             </span>
                                                         </div>
                                                     </div>
                                                 </div>
                                             </div>
-
-
                                         </div>
                                     </div>
                                 </div>
-
-
                             </div>
                             <h4>Why Choose a Web Design and Development Agency?</h4>
                         </div>
