game developement card add

--- a/GameDevelop.html
+++ b/GameDevelop.html
@@ -675,6 +675,14 @@
                                 <p>We also provide cross-platform game development so your game runs optimally on any
                                     operating system Android or iOS.</p>
                             </div>
+                            <p> As for game development, we always take into consideration that each project is as
+                                individual as you are. Here are some reasons to choose Digital Minds On for your
+                                next game development project:<br><br>
+
+                                <b>Experienced Platinum Games Developers:</b> These must be top-notch video game
+                                developers as our team is made up of some of the best in the video game development
+                                industry with experience of many years in different fields of game development such
+                                as players, multiplayer, and online game players.<br><br></p>
                         </div>
                     </div>
                 </div>
@@ -856,15 +864,7 @@
                             <h2>Why Choose Digital Minds On?</h2>
                         </div>
                         <div class="service__details__text" data-aos="fade-up" data-aos-duration="1500">
-                            <p>As for game development, we always take into consideration that each project is as
-                                individual as you are. Here are some reasons to choose Digital Minds On for your
-                                next game development project:<br><br>
-
-                                <b>Experienced Platinum Games Developers:</b> These must be top-notch video game
-                                developers as our team is made up of some of the best in the video game development
-                                industry with experience of many years in different fields of game development such
-                                as players, multiplayer, and online game players.<br><br>
-
+                            <p>
                                 <b>Cutting-Edge Tools:</b> Our software is updated to the latest game development
                                 software so as to make sure that your project is developed using the most current
                                 software.<br><br>
