team page changing merage fixed

--- a/team.html
+++ b/team.html
@@ -515,29 +515,15 @@
                     </div>
 
                     <div class="col-xxl-3 col-xl-4 col-lg-4 col-md-6 col-sm-6 col-12" data-aos="fade-up"
-                        data-aos-duration="1900">
-                        <div class="team__member__3__single text-center team__member__border single__transform">
+                        data-aos-duration="1500">
+                        <div class="team__member__3__single team__member__border text-center single__transform">
                             <div class="team__member__3__single__inner">
                                 <div class="team__member__3__img">
-<<<<<<< Updated upstream
-                                    <img src="assets/img/service/HAMID.png" alt="">
+                                    <img src="assets/img/team/Butt.jpeg" alt="Ahmad">
                                 </div>
                                 <div class="team__member__name">
-=======
-<<<<<<< HEAD
-                                    <img src="assets/img/team/Butt.jpeg" alt="">
-                                </div>
-                                <div class="team__member__name">
-                                    <h6><a href="team-details.html">Mr. Nadeem</a></h6>
+                                    <h6><a href="team-details.html">Mr. Nadeem Butt</a></h6>
                                     <p>Mobile Application</p>
-=======
-                                    <img src="assets/img/service/HAMID.png" alt="">
-                                </div>
-                                <div class="team__member__name">
->>>>>>> Stashed changes
-                                    <h6><a href="team-details.html">Mr. Hamid</a></h6>
-                                    <p>Project Manager</p>
->>>>>>> a560efb666b581e232a36d203f3e22e55dab211f
                                 </div>
                                 <div class="team__member__icon">
                                     <ul>
@@ -591,7 +577,7 @@
                                     <img src="assets/img/team/awaisoffice.png" alt="">
                                 </div>
                                 <div class="team__member__name">
-                                    <h6><a href="team-details.html">Mr. Awais/a></h6>
+                                    <h6><a href="team-details.html">Mr. Awais</a></h6>
                                     <p>Laravel Developer</p>
                                 </div>
                                 <div class="team__member__icon">
