seo page card or from add

--- a/itexpert.html
+++ b/itexpert.html
@@ -755,7 +755,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="row g-4 horizontal-card" style="padding-top: 0px !important;">
+                <div class="row g-4 horizontal-card">
                     <div class="col-md-6">
                         <div class="card mb-3">
                             <div class="row g-0">
