--- a/team-details.html
+++ b/team-details.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Graphic Designer | Graphic Designing Services in USA</title>
+    <title>Graphic Designer | Digital Minds On</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
