--- a/seo.html
+++ b/seo.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>service-Details | Bastun- Business Consulting HTML Template</title>
+    <title>service-Details | Digital Minds On</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -547,6 +547,46 @@
 
 
                         </div>
+                        <!-- from -->
+                        <div class="contact__input__wrapper contact__grident__bg" style="padding: 30px;">
+                            <form id="contact-form" class="contact-form" action="https://html.themewin.com/bastun-preview/bastun/mail.php" method="post">
+                                <div class="row">
+                                    <div class="col-xl-12">
+                                        <div class="contact__input">
+                                            <input class="contact__common__input" type="text" name="con_name" id="con_name" placeholder="Your Name">
+                                        </div>
+                                    </div>
+                                    <div class="col-xl-12">
+                                        <div class="contact__input">
+                                            <input class="contact__common__input" type="text" name="con_email" id="con_email" placeholder="Email">
+                                        </div>
+                                    </div>
+                                    <div class="col-xl-12">
+                                        <div class="contact__input">
+                                            <input class="contact__common__input" type="text" name="phone" placeholder="Phone">
+                                        </div>
+                                    </div>
+                                    <div class="col-xl-12">
+                                        <select class="contact__common__input" name="subject" id="subject">
+                                            <option value="volvo">Subject:</option>
+                                            <option value="saab">Saab</option>
+                                            <option value="mercedes">Mercedes</option>
+                                            <option value="audi">Audi</option>
+                                        </select>
+                                    </div>
+                                    <div class="col-xl-12">
+                                        <textarea class="contact__common__input" name="con_message" id="con_message" cols="30" rows="10">write a message....</textarea>
+                                    </div>
+                                    <div class="col-xl-12">
+                                        <div class="contact__button">
+                                            <button type="submit" value="submit" class="default__button" name="submit">SEND MESSAGE</button>
+                                            <p class="form-messege"></p>
+                                        </div>
+
+                                    </div>
+                                </div>
+                            </form>
+                        </div>
                     </div>
                     <div class="col-xl-8 col-lg-8 col-md-12 col-12">
                         <div class="service__details__wraper">
@@ -608,23 +648,204 @@
                                     incididunt ut labore et dolore magna aliqua. Odio facilisis mauris sit amet massa
                                     vitae tortor condimentum. Etiam sit amet nisl purus in mollis nunc sed. Quam
                                     vulputate dignissim suspendisse in est ante in. Amet commodo nulla facilisi nullam
-                                    vehicula. Arcu vitae elementum curabitur vitae nunc. Duis ultricies lacus sed turpis
-                                    tincidunt id aliquet risus feugiat. Aenean vel elit scelerisque mauris pellentesque
-                                    pulvinar. Turpis egestas maecenas pharetra convallis. Ac turpis egestas maecenas
-                                    pharetra convallis. Morbi tincidunt augue interdum velit euismod. Accumsan sit amet
-                                    nulla facilisi morbi tempus. Scelerisque eleifend donec pretium vulputate sapien nec
-                                    sagittis aliquam.</p>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                                    incididunt ut labore et dolore magna aliqua. Odio facilisis mauris sit amet massa
-                                    vitae tortor condimentum. Etiam sit amet nisl purus in mollis nunc sed. Quam
-                                    vulputate dignissim suspendisse in est ante in. Amet commodo nulla facilisi nullam
-                                    vehicula. Arcu vitae elementum curabitur vitae nunc. Duis ultricies lacus sed turpis
-                                    tincidunt id aliquet risus feugiat. Aenean vel elit scelerisque mauris pellentesque
-                                    pulvinar.</p>
+                                    vehicula. Arcu vitae elementum curabitur vitae nunc.</p>
+                               
                             </div>
-                            <div class="service__details__button" data-aos="fade-up" data-aos-duration="1500">
-                                <a class="default__button" href="#">GET A FREE QUOTE</a>
+                          
+                        </div>
+                    </div>
+                </div>
+                <div class="row g-4 horizontal-card">
+                    <div class="col-md-6">
+                        <div class="card mb-3">
+                            <div class="row g-0">
+                                <div class="col-md-4">
+                                    <img src="assets/img/service/33.jpg" class="img-fluid rounded-start" alt="...">
+                                </div>
+                                <div class="col-md-8">
+                                    <div class="card-body">
+                                        <h5 class="card-title">Custom Web Development</h5>
+                                        <span class="card-text">Digital Minds specializes in custom
+                                            WordPress
+                                            web development, enhancing your brand and creating a web
+                                            presence that aligns perfectly with your business goals.
+                                        </span>
+                                    </div>
+                                </div>
                             </div>
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="card mb-3">
+                            <div class="row g-0">
+                                <div class="col-md-4">
+                                    <img src="assets/img/service/33.jpg" class="img-fluid rounded-start" alt="...">
+                                </div>
+                                <div class="col-md-8">
+                                    <div class="card-body">
+                                        <h5 class="card-title">Frontend/Backend Solutions</h5>
+                                        <span class="card-text">Our knowledgeable team excels in
+                                            creating impactful frontend designs and dynamic,
+                                            efficient backend solutions that ensure scalability and
+                                            robust performance.</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="card mb-3">
+                            <div class="row g-0">
+                                <div class="col-md-4">
+                                    <img src="assets/img/service/33.jpg" class="img-fluid rounded-start" alt="...">
+                                </div>
+                                <div class="col-md-8">
+                                    <div class="card-body">
+                                        <h5 class="card-title">CMS Development</h5>
+                                        <span class="card-text">By adopting web content management
+                                            systems such as WordPress, Joomla, Drupal, and others,
+                                            website content can be updated by persons without any
+                                            technical knowledge of website design.
+                                        </span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="card mb-3">
+                            <div class="row g-0">
+                                <div class="col-md-4">
+                                    <img src="assets/img/service/33.jpg" class="img-fluid rounded-start" alt="...">
+                                </div>
+                                <div class="col-md-8">
+                                    <div class="card-body">
+                                        <h5 class="card-title">E-Commerce Development
+                                        </h5>
+                                        <span class="card-text">Make your visitors into customers with
+                                            our comprehensive e-commerce features, including payment
+                                            PSD templates, stock tracking, and detailed reporting
+                                            tools.
+                                        </span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="card mb-3">
+                            <div class="row g-0">
+                                <div class="col-md-4">
+                                    <img src="assets/img/service/33.jpg" class="img-fluid rounded-start" alt="...">
+                                </div>
+                                <div class="col-md-8">
+                                    <div class="card-body">
+                                        <h5 class="card-title">Web Application Development</h5>
+                                        <span class="card-text">Whether you are a small business
+                                            starting or a large enterprise, we create reliable and
+                                            robust web applications for your needs.
+                                        </span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="card mb-3">
+                            <div class="row g-0">
+                                <div class="col-md-4">
+                                    <img src="assets/img/service/33.jpg" class="img-fluid rounded-start" alt="...">
+                                </div>
+                                <div class="col-md-8">
+                                    <div class="card-body">
+                                        <h5 class="card-title">API Integration </h5>
+                                        <span class="card-text">Automate and integrate relevant
+                                            business applications and CRMs for your website and fast
+                                            payment solutions.
+                                        </span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="card mb-3">
+                            <div class="row g-0">
+                                <div class="col-md-4">
+                                    <img src="assets/img/service/33.jpg" class="img-fluid rounded-start" alt="...">
+                                </div>
+                                <div class="col-md-8">
+                                    <div class="card-body">
+                                        <h5 class="card-title">Responsive Design</h5>
+                                        <span class="card-text">The mobile-first approach is practiced
+                                            at Minds On to make the site look and work right on any
+                                            device the client is using.
+                                        </span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="card mb-3">
+                            <div class="row g-0">
+                                <div class="col-md-4">
+                                    <img src="assets/img/service/33.jpg" class="img-fluid rounded-start" alt="...">
+                                </div>
+                                <div class="col-md-8">
+                                    <div class="card-body">
+                                        <h5 class="card-title">Website Maintenance</h5>
+                                        <span class="card-text">Another critical factor of success in
+                                            e-business is having a professional website. Keeping
+                                            your site updated and secure, we provide all maintenance
+                                            and support services for your website.
+                                        </span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-8">
+                        <div class="card mb-3">
+                            <div class="row g-0">
+                                <div class="col-md-4">
+                                    <img src="assets/img/service/33.jpg" class="img-fluid rounded-start" alt="...">
+                                </div>
+                                <div class="col-md-8">
+                                    <div class="card-body">
+                                        <h5 class="card-title">UI/UX Design</h5>
+                                        <span class="card-text">In UI/UX solutions Minds On
+                                            concentrates on making the design aesthetic and
+                                            functional. Our work involves the creation of designs
+                                            that meet the client’s desires concerning their targeted
+                                            customers besides helping them to meet their targets.
+                                        </span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="service__details__text" data-aos="fade-up" data-aos-duration="1500">
+                            <p>Duis ultricies lacus sed turpis
+                            tincidunt id aliquet risus feugiat. Aenean vel elit scelerisque mauris pellentesque
+                            pulvinar. Turpis egestas maecenas pharetra convallis. Ac turpis egestas maecenas
+                            pharetra convallis. Morbi tincidunt augue interdum velit euismod. Accumsan sit amet
+                            nulla facilisi morbi tempus. Scelerisque eleifend donec pretium vulputate sapien nec
+                            sagittis aliquam.</p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                            incididunt ut labore et dolore magna aliqua. Odio facilisis mauris sit amet massa
+                            vitae tortor condimentum. Etiam sit amet nisl purus in mollis nunc sed. Quam
+                            vulputate dignissim suspendisse in est ante in. Amet commodo nulla facilisi nullam
+                            vehicula. Arcu vitae elementum curabitur vitae nunc. Duis ultricies lacus sed turpis
+                            tincidunt id aliquet risus feugiat. Aenean vel elit scelerisque mauris pellentesque
+                            pulvinar.</p>
+                        </div>
+                        <div class="service__details__button" data-aos="fade-up" data-aos-duration="1500">
+                            <a class="default__button" href="#">GET A FREE QUOTE</a>
                         </div>
                     </div>
                 </div>
