--- a/service-details.html
+++ b/service-details.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>service-Details | Bastun- Business Consulting HTML Template</title>
+    <title>service-Details | Digital Minds On</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
