back to top without url id ifxed

--- a/index.html
+++ b/index.html
@@ -1599,19 +1599,15 @@
         </div>
         <!-- footer__section__end -->
         <!-- back to top -->
-        <a href="#top" class="back-to-top" id="backToTop">
+        <a class="back-to-top" id="backToTop">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor"
                 stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-arrow-up">
                 <path d="M12 19V6M5 12l7-7 7 7" />
             </svg>
         </a>
+        
         <!-- back to top -->
     </main>
-
-
-
-
-
     <!-- JS here -->
     <script src="assets/js/popper.min.js"></script>
     <script src="assets/js/bootstrap.min.js"></script>
@@ -1619,23 +1615,29 @@
     <script src="assets/js/plugins.js"></script>
     <script src="assets/js/swiper-bundle.min.js"></script>
     <script src="assets/js/main.js"></script>
+    <!-- back to top -->
     <script>
-        // JavaScript for Bootstrap validation from hamid
-        (function () {
-            'use strict'
-            var forms = document.querySelectorAll('.needs-validation')
-            Array.prototype.slice.call(forms).forEach(function (form) {
-                form.addEventListener('submit', function (event) {
-                    if (!form.checkValidity()) {
-                        event.preventDefault()
-                        event.stopPropagation()
-                    }
-                    form.classList.add('was-validated')
-                }, false)
-            })
-        })()
-    </script>
-    <script>
+        document.addEventListener("DOMContentLoaded", () => {
+        const backToTopButton = document.getElementById("backToTop");
+        window.addEventListener("scroll", () => {
+            if (window.scrollY > 200) {
+                backToTopButton.classList.add("show");
+            } else {
+                backToTopButton.classList.remove("show");
+            }
+        });
+        backToTopButton.addEventListener("click", (e) => {
+            e.preventDefault(); 
+            window.scrollTo({
+                top: 0,
+                behavior: "smooth",
+            });
+        });
+    });
+   </script>
+
+   <script>
+
         // On page load or when changing themes, best to add inline in `head` to avoid FOUC
         if (localStorage.getItem("theme-color") === "dark" || (!("theme-color" in localStorage) && window.matchMedia("(prefers-color-scheme: dark)").matches)) {
             document.getElementById("light--to-dark-button")?.classList.add("dark--mode");
@@ -1643,6 +1645,7 @@
         if (localStorage.getItem("theme-color") === "#4a179b") {
             document.getElementById("light--to-dark-button")?.classList.remove("dark--mode");
         } 
+
     </script>
 
 </body>
