--- a/GameDevelop.html
+++ b/GameDevelop.html
@@ -682,7 +682,8 @@
                                 <b>Experienced Platinum Games Developers:</b> These must be top-notch video game
                                 developers as our team is made up of some of the best in the video game development
                                 industry with experience of many years in different fields of game development such
-                                as players, multiplayer, and online game players.<br><br></p>
+                                as players, multiplayer, and online game players.<br><br>
+                            </p>
                         </div>
                     </div>
                 </div>
@@ -1109,7 +1110,7 @@
         </div>
         <!-- footer__section__end -->
         <!-- back to top -->
-        <a href="#top" class="back-to-top" id="backToTop">
+        <a class="back-to-top" id="backToTop">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor"
                 stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-arrow-up">
                 <path d="M12 19V6M5 12l7-7 7 7" />
@@ -1129,7 +1130,26 @@
     <script src="assets/js/plugins.js"></script>
     <script src="assets/js/swiper-bundle.min.js"></script>
     <script src="assets/js/main.js"></script>
-
+    <!-- back to top -->
+    <script>
+        document.addEventListener("DOMContentLoaded", () => {
+            const backToTopButton = document.getElementById("backToTop");
+            window.addEventListener("scroll", () => {
+                if (window.scrollY > 200) {
+                    backToTopButton.classList.add("show");
+                } else {
+                    backToTopButton.classList.remove("show");
+                }
+            });
+            backToTopButton.addEventListener("click", (e) => {
+                e.preventDefault();
+                window.scrollTo({
+                    top: 0,
+                    behavior: "smooth",
+                });
+            });
+        });
+    </script>
     <script>
         // On page load or when changing themes, best to add inline in `head` to avoid FOUC
         if (localStorage.getItem("theme-color") === "dark" || (!("theme-color" in localStorage) && window.matchMedia("(prefers-color-scheme: dark)").matches)) {
