--- a/faq.html
+++ b/faq.html
@@ -1,17 +1,14 @@
 <!doctype html>
 <html class="no-js" lang="zxx">
 
-
-<!-- Mirrored from html.themewin.com/bastun-preview/bastun/faq.html by HTTrack Website Copier/3.x [XR&CO'2014], Sat, 19 Oct 2024 19:48:45 GMT -->
-
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>FAQ| Bastun- Business Consulting HTML Template</title>
+    <title>FAQ| Digitalminds On</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-     <link rel="shortcut icon" type="image/x-icon" href="assets/img/logo/icon.svg">
+    <link rel="shortcut icon" type="image/x-icon" href="assets/img/logo/icon.svg">
     <!-- Place favicon.ico in the root directory -->
 
     <!-- CSS here -->
@@ -934,7 +931,7 @@
                     <div class="row align-items-center">
                         <div class="col-xl-6 col-lg-6 col-md-6 col-12">
                             <div class="copyright__left">
-                      <p>Copyright © 2024 <a href="index.html">Digitalminds on.</a> All Right Reserved</p>
+                                <p>Copyright © 2024 <a href="index.html">Digitalminds on.</a> All Right Reserved</p>
                             </div>
                         </div>
                         <div class="col-xl-6 col-lg-6 col-md-6 col-12">
@@ -957,17 +954,14 @@
         </div>
         <!-- footer__section__end -->
 
-    <!-- back to top -->
-    <a href="#top" class="back-to-top" id="backToTop">
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-arrow-up">
-            <path d="M12 19V6M5 12l7-7 7 7"/>
-        </svg>
-    </a>
-           <!-- back to top -->
-
-
-
-
+        <!-- back to top -->
+        <a class="back-to-top" id="backToTop">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-arrow-up">
+                <path d="M12 19V6M5 12l7-7 7 7" />
+            </svg>
+        </a>
+        <!-- back to top -->
     </main>
 
 
@@ -982,7 +976,26 @@
     <script src="assets/js/plugins.js"></script>
     <script src="assets/js/swiper-bundle.min.js"></script>
     <script src="assets/js/main.js"></script>
-
+    <!-- back to top -->
+    <script>
+        document.addEventListener("DOMContentLoaded", () => {
+            const backToTopButton = document.getElementById("backToTop");
+            window.addEventListener("scroll", () => {
+                if (window.scrollY > 200) {
+                    backToTopButton.classList.add("show");
+                } else {
+                    backToTopButton.classList.remove("show");
+                }
+            });
+            backToTopButton.addEventListener("click", (e) => {
+                e.preventDefault();
+                window.scrollTo({
+                    top: 0,
+                    behavior: "smooth",
+                });
+            });
+        });
+    </script>
     <script>
         // On page load or when changing themes, best to add inline in `head` to avoid FOUC
         if (localStorage.getItem("theme-color") === "dark" || (!("theme-color" in localStorage) && window.matchMedia("(prefers-color-scheme: dark)").matches)) {
